--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropdown-now": "^6.0.1",
     "react-router-dom": "^6.3.0",
     "reactstrap": "^9.0.3",
     "web-vitals": "^2.1.4"
