--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
     "react-router-dom": "^6.3.0",
+    "react-spring": "^9.4.5",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
