--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
@@ -25,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-mock": "json-server data/db.json"
   },
   "eslintConfig": {
     "extends": [
