--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -13,17 +14,21 @@
     "@types/react-select": "^5.0.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-spring": "^9.4.5",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
