--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "colors": "^1.4.0",
+    "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "concurrently": "^7.2.2",
-    "nodemon": "^2.0.18",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.18"
   }
 }
