--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI = mongodb+srv://eBeauty:eBeauty-01@cluster0.kdlbhej.mongodb.net/databasename?retryWrites=true&w=majority
+NODE_ENV = development
+PORT = 5000
+MONGO_URI = mongodb+srv://amor:eBeauty-01@amor.f6fwapf.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY = this is very secret that should not show
