--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd ../frontend && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node seeder -i",
+    "data:destroy": "node seeder -d"
   },
   "author": "",
   "license": "ISC",
