--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,6 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "nodemon": "^2.0.18"
+    "path": "^0.12.7"
   }
 }
