--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
     "react-file-base64": "^1.0.3",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-spinners": "^0.13.1",
