--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-select": "^5.0.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "form-data": "^4.0.0",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
     "react-icons": "^4.4.0",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-spring": "^9.4.5",
