--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.18",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-stars": "^2.2.5"
   }
 }
