--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@react-google-maps/api": "^2.12.0",
+    "@syncfusion/ej2-react-calendars": "^20.2.36",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,13 +20,14 @@
     "react": "^18.1.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
-    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-spinners": "^0.13.1",
