--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "proxy": "http://127.0.0.1:5000",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/material": "^5.8.6",
     "@react-google-maps/api": "^2.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,10 +27,10 @@
     "react-dropdown-now": "^6.0.1",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.4.0",
+    "react-notifications-component": "^4.0.1",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
-    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-spinners": "^0.13.1",
