--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.8.6",
     "@react-google-maps/api": "^2.12.0",
+    "@syncfusion/ej2-base": "^20.2.36",
+    "@syncfusion/ej2-buttons": "^20.2.36",
     "@syncfusion/ej2-react-calendars": "^20.2.36",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
