--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
