--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@mui/material": "^5.8.6",
     "@react-google-maps/api": "^2.12.0",
     "@syncfusion/ej2-base": "^20.2.36",
