--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.6",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-google-maps/api": "^2.12.0",
     "@syncfusion/ej2-base": "^20.2.36",
     "@syncfusion/ej2-buttons": "^20.2.36",
@@ -45,6 +47,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
