--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "busboy": "^1.6.0",
     "colors": "^1.4.0",
     "concurrently": "^7.2.2",
     "cors": "^2.8.5",
@@ -29,7 +30,6 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.18",
     "path": "^0.12.7",
