--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "multer-gridfs-storage": "^5.0.2",
