--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,9 +50,7 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "use-places-autocomplete": "^4.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
+    "web-vitals": "^2.1.4",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
