--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "npm install --legacy-peer-deps && node server.js",
+    "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd ../frontend && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
