--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,7 @@
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "use-places-autocomplete": "^4.0.0"
-  },
-  "devDependencies": {
+    "use-places-autocomplete": "^4.0.0",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.18",
     "path": "^0.12.7",
